--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-langchain==0.0.147
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-streamlit==1.22.0
-faiss-cpu==1.7.4
-streamlit-extras
-altair<5
-openai==0.27.6
-tiktoken
-azure-identity==1.13.0
-azure-keyvault-secrets==4.7.0
-pandas
-python-docx
-openpyxl
-xlrd
+streamlit>=1.42.0
+langchain>=0.1.0
+langchain-community>=0.0.13
+langchain-google-genai>=0.0.5
+google-generativeai>=0.3.1
+chromadb>=0.4.18
+sentence-transformers>=2.2.2
+PyYAML>=6.0
+pypdf>=3.17.0
+python-docx>=0.8.11
+openpyxl>=3.1.2
+pandas>=2.0.0
+bs4>=0.0.1
+python-dotenv>=1.0.0 
