--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.42.0
-langchain>=0.1.0
-langchain-community>=0.0.13
+langchain>=0.1.11
+langchain-community>=0.0.29
 langchain-google-genai>=0.0.5
 google-generativeai>=0.3.1
 chromadb>=0.4.18
@@ -11,4 +11,11 @@ python-docx>=0.8.11
 openpyxl>=3.1.2
 pandas>=2.0.0
 bs4>=0.0.1
-python-dotenv>=1.0.0 
+python-dotenv>=1.0.0
+tiktoken
+faiss-cpu
+rapidocr-onnxruntime
+pillow
+pymupdf
+langchain-huggingface>=0.0.6
+langchain-chroma>=0.0.3 
