--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,10 @@ rapidocr-onnxruntime
 pillow
 pymupdf
 langchain-huggingface>=0.0.6
-langchain-chroma>=0.0.3 
+langchain-chroma>=0.0.3
+requests>=2.28.0
+beautifulsoup4>=4.11.1
+tiktoken>=0.4.0
+faiss-cpu>=1.7.3
+rapidocr-onnxruntime>=1.3.0
+pillow>=9.3.0
