--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-langchain==0.0.147
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-streamlit==1.22.0
-faiss-cpu==1.7.4
-streamlit-extras
-altair<5
-openai==0.27.6
-tiktoken
-azure-identity==1.13.0
-azure-keyvault-secrets==4.7.0
+onnxruntime
+sentence-transformers
 pandas
 python-docx
-openpyxl
-xlrd
+PyPDF2
+python-dotenv
+scikit-learn
+loguru
+requests
+google-generativeai
+aiohttp>=3.8.0
+asyncio
+bs4
+pyyaml
+streamlit
+typesense>=0.17.0
+meilisearch>=0.26.0
+opensearch-py>=2.0.0
+pyarrow>=12.0.0 
